--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@
       @apply flex items-center gap-2 bg-blue-400 dark:bg-blue-700 text-white/85 font-bold px-4 py-2 rounded-lg hover:bg-[#218dff] dark:hover:bg-[#1973c0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#218dff] dark:focus:ring-[#1973c0]
     }
 
+    .gradient-title {
+      @apply font-extrabold tracking-tighter text-transparent pr-2 pb-2 bg-gradient-to-br from-red-500 via-blue-100 to-blue-400 bg-clip-text;
+    }
+
 
       .top-navigation-icon {
         @apply text-gray-500
