--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,19 @@ body {
         rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear gap-2
     }
 
+    .sidebar-style-large {
+      @apply w-64 h-[calc(100vh-4.5rem)]
+          bg-white border-r border-gray-200 
+          dark:bg-gray-800 dark:border-gray-700 
+          flex flex-col 
+    }
+
+    .sidebar-style-small {
+      @apply fixed top-0 left-0 w-64 h-full bg-white dark:bg-gray-800 z-50;
+      transition: transform 0.3s ease-in-out;
+    }
+    
+
     .sidebar-tooltip {
        @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left;
     }
