--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Define default font globally */
+body {
+  
+  font-optical-sizing: auto;
+  font-weight: 400; /* Default weight */
+  font-style: normal;
+}
+
+
 .lexical h1 {
   @apply block font-sans text-4xl font-semibold leading-[1.3] tracking-normal text-inherit antialiased;
 }
@@ -34,6 +43,36 @@
   @apply rounded-md bg-gray-900/[0.1] px-1 py-0.5 text-sm font-normal text-gray-900;
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.dark .custom-scrollbar::-webkit-scrollbar-track {
+  background: #374151;
+}
+
+.dark .custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #6b7280;
+}
+
+.dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #9ca3af;
+}
+
 
 @layer components {
     .sidebar-style {
@@ -41,6 +80,19 @@
         hover:bg-green-500  cursor-pointer
         rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear gap-2
     }
+
+    .sidebar-style-large {
+      @apply w-64 h-[calc(100vh-4.5rem)]
+          bg-white border-r border-gray-200 
+          dark:bg-gray-800 dark:border-gray-700 
+          flex flex-col 
+    }
+
+    .sidebar-style-small {
+      @apply fixed top-0 left-0 w-64 h-full bg-white dark:bg-gray-800 z-50;
+      transition: transform 0.3s ease-in-out;
+    }
+    
 
     .sidebar-tooltip {
        @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left;
