--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,14 @@ body {
       @apply flex items-center gap-2 bg-blue-400 dark:bg-blue-700 text-white/85 font-bold px-4 py-2 rounded-lg hover:bg-[#218dff] dark:hover:bg-[#1973c0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#218dff] dark:focus:ring-[#1973c0]
     }
 
+    .button-style-close{
+      @apply px-4 py-2 text-sm font-medium text-gray-700 dark:text-gray-300 hover:text-gray-800 
+      dark:hover:text-gray-200 bg-white dark:bg-gray-700 border border-gray-300 
+      dark:border-gray-600 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-600 
+      focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 
+      dark:focus:ring-offset-gray-800 transition-colors
+    }
+
     .gradient-title {
       @apply font-extrabold tracking-tighter text-transparent pr-2 pb-2 bg-gradient-to-br from-red-500 via-blue-100 to-blue-400 bg-clip-text;
     }
